--- a/.github/workflows/send-submodule-updates-to-githubio.yml
+++ b/.github/workflows/send-submodule-updates-to-githubio.yml
@@ -3,7 +3,7 @@ name: Send submodule updates to parent repo
 on:
   push:
     branches: 
-      - actions-push-deploy
+      - main
 
 jobs:
   update:
