--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -w",
-    "start-webdev": "webpack-dev-server",
-    "start": "concurrently --kill-others \"npm run start-webdev\" \"npm run dev\"",
+    "start": "webpack serve --open",
+    "start-old": "concurrently --kill-others \"npm run start-webdev\" \"npm run dev\"",
     "build": "webpack"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
+    "@types/typed.js": "^2.0.9",
     "typescript": "^4.5.4"
   }
 }
